# LyrioChatbots

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  jorge_launcher.py  offer-kit.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/: FUNDING.yml
alembic/: env.py
benchmarks/: RESULTS.md  bench_bot_response.py  bench_handoff.py  run_all.py  run_benchmarks.py
billing/: __init__.py  quota_enforcement.py  quota_manager.py  stripe_client.py  subscription_service.py  webhook_handler.py
command_center/: async_runtime.py  dashboard_v3.py  event_client.py  production_monitor.py
database/: __init__.py  base.py  billing_models.py  models.py  repository.py  session.py
docs/: 02-ghl-setup-guide.md  03-current-system-deployed.md  04-enterprise-dev-beyond-spec.md  05-alignment-corrections-today.md  06-remaining-work-to-finish.md  E2E_SMOKE_TEST.md  EVAL_PROMPT.md  PRODUCTIZATION_CONTINUATION_CHECKLIST.md  SPEC.md  TROUBLESHOOTING.md  WEBHOOK_ROUTING_SPEC.md  billing_public_contract.md  bot-spec.md  jorge-status-2026-03-02.md  jorge-system-map.md  jorge-update-email.md
examples/: lead_intelligence_integration_example.py
scripts/: chat_bots_direct.sh  chat_bots_webhook.sh  create_account.py  create_first_account_railway.sh  e2e_live_test.sh  phase3c_integration_test.py  seed_demo_data.py  start_dashboard_with_ngrok.py  start_service.sh  test_auth_system.py  test_phase1_integration.py  validate_offer_kit.py  (+3 more)
(+175 files in other folders)
